# shared-knowledge-dao

./: .gitignore  Cargo.toml  README.md  lib.rs
.github/workflows/: contracts.yml
contracts/: .gitignore  Dockerfile  addresses.json
contracts/database/: .gitignore  Cargo.toml  lib.rs
contracts/governor/: .gitignore  Cargo.toml  lib.rs
contracts/sage/: .gitignore  Cargo.toml  governor.out  lib.rs
contracts/token/: .gitignore  Cargo.toml  lib.rs
frontend/: .eslintrc.js  Dockerfile  TODO  \  docker-compose.yml  lint.sh  package-lock.json  package.json  start.sh
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/components/Database/: Database.tsx
frontend/src/components/DatabaseItem/: DatabaseItem.tsx  index.tsx
frontend/src/components/HeroHeading/: HeroHeading.tsx
frontend/src/components/Layout/: Layout.tsx
frontend/src/components/Navbar/: Navbar.tsx
frontend/src/components/NotificationToast/: NotificationToast.tsx
frontend/src/components/PopupTemplate/: PopupTemplate.tsx
frontend/src/metadata/: addresses.json  database_metadata.json  governor_metadata.json  token_metadata.json
frontend/src/redux/: localStorage.ts  store.tsx
frontend/src/utils/: checkIfAddressIsValid.ts  checkIfSufficientValue.ts  common.ts  decode.ts  decodeDatabaseEvent.ts  decodeGovernorEvent.ts  executeGovernor.ts  getDatabaseItem.ts  getDatabaseItemsIds.ts  getProposal.ts  getProposalPrice.ts  getProposalsIds.ts  getToken.ts  getTokensBalance.ts  getVoteWeight.ts  handleEvent.ts  proposeDatabase.ts  proposeToken.ts  types.ts  useOutsideClickCallback.ts  voteGovernor.ts
scripts/: build_contracts_docker.sh  deploy.sh  deploy_frontend_docker.sh  run_interactive_dev_docker.sh  run_tests_docker.sh  terminate.sh
(+60 files in other folders)
